[gd_scene load_steps=20 format=3 uid="uid://crk7re7tacp13"]

[ext_resource type="Script" path="res://overworld/city/ui/city_ui.gd" id="1_fncgd"]
[ext_resource type="Texture2D" uid="uid://chtrguk37mbhg" path="res://assets/TinySwords/Resources/Resources/G_Idle.png" id="2_nk3qi"]
[ext_resource type="Texture2D" uid="uid://bwakooea0r0o0" path="res://assets/TinySwords/Resources/Resources/M_Idle.png" id="3_rpt8m"]
[ext_resource type="Texture2D" uid="uid://cl86yhw6xxdvb" path="res://assets/brick.png" id="4_psw5n"]
[ext_resource type="Texture2D" uid="uid://cqqko1rxqiww0" path="res://assets/TinySwords/Resources/Resources/W_Idle_(NoShadow).png" id="5_8rlq2"]
[ext_resource type="Texture2D" uid="uid://b7qfr1sp7fbv5" path="res://assets/TinySwords/Factions/Knights/Buildings/House/House_Blue.png" id="6_40aia"]
[ext_resource type="Texture2D" uid="uid://d0ccfiowlx3yv" path="res://assets/TinySwords/Resources/Resources/W_Idle.png" id="7_6nbvp"]
[ext_resource type="Texture2D" uid="uid://bdbga1keu84ht" path="res://assets/TinySwords/Resources/Gold Mine/GoldMine_Inactive.png" id="8_os8hh"]
[ext_resource type="Texture2D" uid="uid://7aekqyq0s1ku" path="res://assets/TinySwords/Resources/Sheep/HappySheep_Idle.png" id="9_0v2mv"]
[ext_resource type="Texture2D" uid="uid://cc2ffc303jxh0" path="res://assets/wall_wood_strait.png" id="10_2yxfy"]
[ext_resource type="Texture2D" uid="uid://ouca84f1g0vf" path="res://assets/wall_wood_angle.png" id="11_qejee"]
[ext_resource type="Texture2D" uid="uid://44rtmwoxx6ur" path="res://assets/gate.png" id="12_mpb67"]
[ext_resource type="PackedScene" uid="uid://wd4olcuavot" path="res://overworld/city/ui/building.tscn" id="13_uf7p5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hc6tc"]
atlas = ExtResource("2_nk3qi")
region = Rect2(44, 48, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mglu"]
atlas = ExtResource("3_rpt8m")
region = Rect2(43, 57, 50, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_po160"]
atlas = ExtResource("5_8rlq2")
region = Rect2(38, 72, 52, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy0gg"]
atlas = ExtResource("9_0v2mv")
region = Rect2(39, 39, 51, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f537c"]
atlas = ExtResource("7_6nbvp")
region = Rect2(39, 70, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w4x6"]
atlas = ExtResource("12_mpb67")
region = Rect2(20.4918, 0.0691376, 21.6669, 64.3634)

[node name="city_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fncgd")

[node name="resources_panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -231.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="resources_panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="resources_panel/MarginContainer"]
layout_mode = 2

[node name="gold" type="TextureRect" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_hc6tc")
expand_mode = 3
stretch_mode = 4

[node name="gold_label" type="Label" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "0"

[node name="food" type="TextureRect" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_7mglu")
expand_mode = 3
stretch_mode = 4

[node name="food_label" type="Label" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="stone" type="TextureRect" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_psw5n")
expand_mode = 3
stretch_mode = 4

[node name="stone_label" type="Label" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "0"

[node name="wood" type="TextureRect" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_po160")
stretch_mode = 5

[node name="wood_label" type="Label" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="build_panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -185.5
offset_right = 265.0
offset_bottom = 185.5
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="build_panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="build_panel/MarginContainer"]
layout_mode = 2

[node name="Control" type="VBoxContainer" parent="build_panel/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(100, 500)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="house" parent="build_panel/MarginContainer/ScrollContainer/Control" instance=ExtResource("13_uf7p5")]
layout_mode = 2
icon = ExtResource("6_40aia")

[node name="mine" parent="build_panel/MarginContainer/ScrollContainer/Control" instance=ExtResource("13_uf7p5")]
layout_mode = 2
icon = ExtResource("8_os8hh")

[node name="food_hut" parent="build_panel/MarginContainer/ScrollContainer/Control" instance=ExtResource("13_uf7p5")]
layout_mode = 2
icon = SubResource("AtlasTexture_oy0gg")

[node name="wood_cutter" parent="build_panel/MarginContainer/ScrollContainer/Control" instance=ExtResource("13_uf7p5")]
layout_mode = 2
icon = SubResource("AtlasTexture_f537c")

[node name="wall" parent="build_panel/MarginContainer/ScrollContainer/Control" instance=ExtResource("13_uf7p5")]
layout_mode = 2
icon = ExtResource("10_2yxfy")

[node name="angled_wall" parent="build_panel/MarginContainer/ScrollContainer/Control" instance=ExtResource("13_uf7p5")]
layout_mode = 2
icon = ExtResource("11_qejee")

[node name="gate" parent="build_panel/MarginContainer/ScrollContainer/Control" instance=ExtResource("13_uf7p5")]
layout_mode = 2
icon = SubResource("AtlasTexture_0w4x6")

[node name="city_buttons" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -83.0
offset_right = 160.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="city_buttons"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="city_buttons/MarginContainer"]
layout_mode = 2

[node name="build_mode_button" type="Button" parent="city_buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"ButtonMid"
text = "Build"

[node name="remove_mode_button" type="Button" parent="city_buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"ButtonMid"
toggle_mode = true
text = "Remove"

[connection signal="pressed" from="build_panel/MarginContainer/ScrollContainer/Control/house" to="." method="on_house_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/ScrollContainer/Control/mine" to="." method="on_mine_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/ScrollContainer/Control/food_hut" to="." method="on_food_hut_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/ScrollContainer/Control/wood_cutter" to="." method="on_wood_cutter_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/ScrollContainer/Control/wall" to="." method="on_wall_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/ScrollContainer/Control/angled_wall" to="." method="on_angle_wall_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/ScrollContainer/Control/gate" to="." method="on_gate_pressed"]
[connection signal="pressed" from="city_buttons/MarginContainer/HBoxContainer/build_mode_button" to="." method="on_build_mode_button_pressed"]
[connection signal="toggled" from="city_buttons/MarginContainer/HBoxContainer/remove_mode_button" to="." method="on_remove_mode_button_toggled"]
